Fix time setting function